# RTYPE

./: CMakeLists.txt  Dockerfile  Doxyfile  License.txt  README.md  RTYPE--Linux.sh  docker-compose.yml  make
Client/: README.md  rfcTCP.txt  rfcUDP.txt
Client/Component/: RegisterComponents.hpp
Client/Core/: main.cpp  startClient.cpp  startClient.hpp
Client/Systems/Background/: BackgroundSystems.cpp  BackgroundSystems.hpp
Client/Systems/Button/: ButtonSystem.cpp  ButtonSystem.hpp
Client/Systems/Draw/: DrawSystems.cpp  DrawSystems.hpp
Client/Systems/InputHandling/: Control.cpp  InputHandlingSystems.cpp  InputHandlingSystems.hpp
Client/Systems/Physique/: Collision.cpp  Movement.cpp  PhysiqueSystems.cpp  PhysiqueSystems.hpp
Client/Systems/Rendering/: RenderingSystems.cpp  RenderingSystems.hpp
Client/Systems/VisualEffect/: VisualEffectSystems.cpp  VisualEffectSystems.hpp
Client/TCPGame/: ClientMenu.cpp  ClientMenu.hpp  ClientTCPSingletons.hpp  Layers.cpp  tcpClientGameLogic.cpp  tcpClientGameLogic.hpp
Client/UDPGame/: ClientGame.cpp  ClientGame.hpp  ClientUDPSingletons.hpp  InputControl.cpp  logicGameClient.cpp  logicGameClient.hpp
Engine/: GameCore.cpp  GameCore.hpp  IGame.hpp  README.md
Engine/CacheManagement/: TextCache.hpp  TextureCache.hpp
Engine/ComponentManagement/: EngineComponents.hpp  RegisterComponents.cpp  Registry.hpp  Sparse.hpp
Engine/Components/: DrawC.hpp  EComponents.hpp  GameplayC.hpp  Singletons.hpp
Engine/Entity/: EntityCache.cpp  EntityCache.hpp  IEntity.hpp
Engine/Error/: ErrorLoader.cpp  ErrorLoader.hpp
Engine/Loader/: ClassLoader.cpp  ClassLoader.hpp
Engine/Network/: DataStructure.hpp  INetwork.hpp
Engine/Network/Client/: ClientTCP.cpp  ClientTCP.hpp  ClientUDP.cpp  ClientUDP.hpp
Engine/Network/NetworkUtils/: DataTransfer.cpp  DataTransfer.hpp  Serialization.hpp  tools.cpp  tools.hpp
Engine/Network/Server/: ServerTCP.cpp  ServerTCP.hpp  ServerTCPHandler.cpp  ServerTCPHandler.hpp  ServerUDP.cpp  ServerUDP.hpp
Engine/Systems/: Audio.cpp  Audio.hpp  ESystems.cpp  ESystems.hpp  ISystem.hpp
Engine/Utils/: CSV.cpp  CSV.hpp  Collision.cpp  Queue.hpp  SafeVector.hpp  Time.cpp  Time.hpp  Utils.hpp
Initialization/Entity/: Auxiliaries.json  Background.csv  Button.csv  Enemy.json  Font.csv  GameEffect.csv  GameMusic.csv  MenuEffect.csv  MenuMusic.csv  Missile.json  Player.csv  SoundEffect.csv  Text.csv  VisualEffect.csv  VisualEffect.json  Waves1.csv  Waves2.csv  Waves3.csv
Libs/: main.cpp
Libs/Encapsulation/Documentation/: README.md
Libs/Encapsulation/Raylib/cmake/: Findraylib.cmake
Libs/Encapsulation/Raylib/src/: Lib.cpp  Lib.hpp
Libs/Encapsulation/Raylib/src/Element/: Element.cpp  Element.hpp
Libs/Encapsulation/Raylib/src/Interaction/: Interaction.cpp  (+1 more)
Libs/Encapsulation/include/: IElement.hpp  IGraphical.hpp  ISound.hpp  IText.hpp  Iinteraction.hpp
Libs/JSONcpp/: Findjsoncpp.cmake
Server/: README.md  rfcTCP.txt  rfcUDP.txt
Server/Core/: main.cpp  startServer.cpp  startServer.hpp
Server/Systems/EnemySystem/: EnemySystems.cpp  EnemySystems.hpp
Server/Systems/EntityGeneration/: Auxiliaries.cpp  Enemies.cpp  EntityGeneration.hpp  Missile.cpp
Server/Systems/Network/: SendDataSystems.cpp  SendDataSystems.hpp
Server/Systems/Physique/: Collision.cpp  Movement.cpp  PhysiqueSystems.cpp  PhysiqueSystems.hpp
Server/Systems/VisualEffect/: VisualEffectSystems.cpp  VisualEffectSystems.hpp
Server/TCPGame/: ServerMenu.cpp  ServerMenu.hpp  ServerTCPSingletons.hpp  tcpServerGameLogic.cpp  tcpServerGameLogic.hpp
Server/UDPGame/: ServerGame.cpp  ServerGame.hpp  UDPSingletons.hpp  logicGameServer.cpp  logicGameServer.hpp
html/: Audio_8hpp_source.html  Auxiliaries_8hpp_source.html  BackgroundSystems_8hpp_source.html  Background_8hpp_source.html  ButtonSystem_8hpp_source.html  Button_8hpp_source.html  CSV_8hpp_source.html  ClassLoader_8hpp_source.html  ClientGame_8hpp_source.html  ClientMenu_8hpp_source.html  ClientTCPSingletons_8hpp_source.html  ClientTCP_8hpp_source.html  ClientUDPSingletons_8hpp_source.html  ClientUDP_8hpp_source.html  Client_2Systems_2Physique_2PhysiqueSystems_8hpp_source.html  Client_2Systems_2VisualEffect_2VisualEffectSystems_8hpp_source.html  Client_8hpp_source.html  Components_8hpp_source.html  DataStructure_8hpp_source.html  DataTransfer_8hpp_source.html  DrawC_8hpp_source.html  DrawSystems_8hpp_source.html  EComponents_8hpp_source.html  ESystems_8hpp_source.html  Element_8hpp_source.html  EnemySystems_8hpp_source.html  Enemy_8hpp_source.html  EngineComponents_8hpp_source.html  EntityCache_8hpp_source.html  EntityGeneration_8hpp_source.html  ErrorLoader_8hpp_source.html  Fonts_8hpp_source.html  GameCore_8hpp_source.html  GameplayC_8hpp_source.html  GlobalC_8hpp_source.html  IElement_8hpp_source.html  IEntity_8hpp_source.html  IGame_8hpp_source.html  IGraphical_8hpp_source.html  INetworkUDP_8hpp_source.html  (+467 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_15.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  functions_0.js  functions_1.js  (+21 more)
src/ComponentManagement/: Components.hpp  GlobalC.hpp  RegisterComponents.cpp
src/DataStructure/: TCPDataStructure.hpp  UDPDataStructure.hpp
src/Entity/: Auxiliaries.cpp  Auxiliaries.hpp  Background.cpp  Background.hpp  Button.cpp  Button.hpp  Enemy.cpp  Enemy.hpp  Fonts.cpp  Fonts.hpp  Missile.cpp  Missile.hpp  Obstacle.cpp  Obstacle.hpp  Player.cpp  Player.hpp  Powerup.cpp  Powerup.hpp  SoundEffect.cpp  SoundEffect.hpp  StaticImage.cpp  StaticImage.hpp  Text.cpp  Text.hpp  VisualEffect.cpp  VisualEffect.hpp
src/MapGenerator/: MapGenerator.cpp  MapGenerator.hpp  randomWaves.csv
src/Systems/: Systems.hpp
src/Systems/Text/: TextSystems.cpp  TextSystems.hpp
(+4 files in other folders)
